--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
               <div class="swiper-wrapper align-items-center">
                 
                 <div class="swiper-slide">
-                  <img src="assets/img/Sleepy Jordan.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/AAPG Conference.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Sleepy Jordan.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/Hydrothermal Lab Photo.png" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -627,7 +627,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Star Realms Box 3D Design.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Star Realms Front.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Card Game Box</h4>
                 <p>3D Printing</p>
@@ -640,7 +640,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SS orrery glossary.PNG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Orrery Front.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Orrery</h4>
                 <p>3D Printing</p>
@@ -666,12 +666,38 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Mask All.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Halloween Mask</h4>
                 <p>Electronics, Programming</p>
                 <div class="portfolio-links">
                   <a href="mask-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Details"><i class="bx bx-search"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-electronics">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/BRAT7066 Board Design.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>15 Segment Display Board</h4>
+                <p>Electronics</p>
+                <div class="portfolio-links">
+                  <a href="brat7066-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Details"><i class="bx bx-search"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-3d_printing filter-programming">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Gameboy Alien.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Portable Video Game Player</h4>
+                <p>Electronics, Programming, 3D Printing</p>
+                <div class="portfolio-links">
+                  <a href="videogame-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Details"><i class="bx bx-search"></i></a>
                 </div>
               </div>
             </div>
@@ -789,12 +815,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/Paul Bowen.jpg" class="testimonial-img" alt="">
                 <h3>Paul Bowen</h3>
-                <h4>Research Scientist</h4>
+                <h4>Scientist II at Chesapeake Energy</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I think Jordan is the best!
+                  Jordan's problem solving skills are difficult to beat. Without his programming skills and knowledge of circuits, may of my projects would not be possible.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -802,12 +828,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Joey Durham</h3>
-                <h4>Mechanical Engineer</h4>
+                <img src="assets/img/testimonials/Joey Durham.jpg" class="testimonial-img" alt="">
+                <h3>Joe Durham</h3>
+                <h4>Project Engineer at KPI Solutions</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Jordan is rad!
+                  Jordan has a knack for producing sublime work from the most minimal direction. His creative vision and artistic talent are nothing short of extraordinary.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -815,12 +841,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Alexa Socianu</h3>
-                <h4>Geologist</h4>
+                <img src="assets/img/testimonials/Haleigh Howe.jpg" class="testimonial-img" alt="">
+                <h3>Haleigh Howe</h3>
+                <h4>X-Ray Diffraction Specialist at Stratum Reservoir</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Wow!
+                  Jordan's passion for learning is an inspiration to me. If given the opportunity to work with him again, I would certainly take it.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
