--- a/mask-details.html
+++ b/mask-details.html
@@ -40,7 +40,7 @@
   <main id="main">
 
     <!-- ======= Portfolio Details Section ======= -->
-    <section id="orrery-details" class="portfolio-details">
+    <section id="mask-details" class="portfolio-details">
       <div class="container">
 
         <div class="row gy-4">
@@ -50,11 +50,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Mask All.JPG" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Halloween Mask Original.jpeg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Mask Closeup.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Mask On.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Mask Start Up.mp4" class="img-fluid" type="video/mp4"></video>             
+                </div>
+
+                <div class="swiper-slide">
+                  <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Mask Voice Changer.mp4" class="img-fluid" type="video/mp4"></video>             
                 </div>
 
               </div>
@@ -77,7 +89,7 @@
                 <p class="indent">
                   This is one of my very first electronics projects I took on as an adult. The mask is a <i>Mad Max</i> themed voice changer I made for Halloween while in graduate school.
                   The mask uses two arduinos, one to control the lights and one to control the voice changer. The voice changer uses a WAV shield to alter your voice based on a 
-                  potentiometer (high or low).
+                  potentiometer (high or low). The inspiration came from this <a href="https://learn.adafruit.com/wave-shield-voice-changer/overview">Adafruit</a> project.
                 </p>
               </div>
             </div>
