--- a/orrery-details.html
+++ b/orrery-details.html
@@ -50,7 +50,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/SS orrery glossary.PNG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Orrery Front.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Orrery Closeup.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Orrery Top.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Orrery Demo.mp4" class="img-fluid" type="video/mp4"></video>             
                 </div>
 
                 <div class="swiper-slide">
