--- a/starrealms-details.html
+++ b/starrealms-details.html
@@ -50,7 +50,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Star Realms Box 3D Design.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Star Realms Front.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Star Realms Close Up.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Star Realms Top.JPG" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
