--- a/bookmarks-details.html
+++ b/bookmarks-details.html
@@ -54,7 +54,15 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Bookmarks SVG.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Robot Bookmark.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Russel Bookmark.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Ashley Bookmark.JPG" class="img-fluid" alt="">
                 </div>
 
               </div>
