--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                 <h4>Scientist II at Chesapeake Energy</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Jordan's problem solving skills are difficult to beat. Without his programming skills and knowledge of circuits, may of my projects would not be possible.
+                  Jordan's problem solving skills are difficult to beat. Without his programming skills and knowledge of circuits, many of my projects would not be possible.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
