--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Hydrothermal Lab Photo.png" class="img-fluid" alt="">
+                  <img src="assets/img/Short Lab Video.gif" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -523,7 +523,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-laser_cutting filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Switch Box Close Up.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Switch Box Solution.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Binary Switch Box Puzzle</h4>
                 <p>Electronics, Laser Cutting, 3D Printing</p>
@@ -549,7 +549,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming filter-laser_cutting filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Test Tube Corner Photo.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Biochemistry Solution.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Biochemistry Puzzle</h4>
                 <p>Electronics, Programming, Laser Cutting, 3D Printing</p>
@@ -640,7 +640,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Orrery Front.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Orrery Demo.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Orrery</h4>
                 <p>3D Printing</p>
@@ -679,7 +679,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/BRAT7066 Board Design.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Multisim Board Design.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>15 Segment Display Board</h4>
                 <p>Electronics</p>
