--- a/micp-details.html
+++ b/micp-details.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/MICP Workup.JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Autopore.jpg" class="img-fluid" alt="">
                 </div>
 
               </div>
