--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          -->
         <div class="row gy-4">
           <div class="col-lg-4">
-            <div class="portfolio-details-slider swiper">
+            <div class="about-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 
                 <div class="swiper-slide">
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Short Lab Video.gif" class="img-fluid" alt="">
+                  <img src="assets/img/Hydrothermal Lab Photo.png" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -497,7 +497,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-laser_cutting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Synth Complete.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Modular Synth.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Modular Synthesizer</h4>
                 <p>Laser Cutting</p>
@@ -562,7 +562,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming filter-laser_cutting filter-3d_printing">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Holograms Proto All On.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Hologram GIF.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Alien Spaceship Puzzle</h4>
                 <p>Electronics, Programming, Laser Cutting, 3D Printing</p>
@@ -653,7 +653,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-laser_cutting">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Bookmarks SVG.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Russel Bookmark.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bookmarks</h4>
                 <p>Laser Cutting</p>
@@ -666,7 +666,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Mask All.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Mask GIF.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Halloween Mask</h4>
                 <p>Electronics, Programming</p>
