--- a/stress dependent-details.html
+++ b/stress dependent-details.html
@@ -83,7 +83,8 @@
                 <p class="indent">
                   The program sends commands to a Keithley switchbox to switch between each pair of piezeo-electric crystals, inducing 3 waveforms for each direction. The program then 
                   retrieves the waveforms from a Keysight oscilloscope and displays the data for the user to analyze. Once arrival times have been selected by the user, the program generates 
-                  and saves an Excel spreadsheet with the compiled data.
+                  and saves an Excel spreadsheet with the compiled data. For more information, you can view the user manual I 
+                  created <a href="assets/Stress Dependent Help Document.pdf" download="Stress Dependent Manual">here</a>.
                 </p>
               </div>
             </div>
