--- a/corecleaner-details.html
+++ b/corecleaner-details.html
@@ -50,7 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Core Cleaner Code (small).JPG" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Core Cleaner Interface.JPG" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -76,7 +76,10 @@
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
                   A CO<sub>2</sub>-Toluene core cleaner is designed to clean rock samples of their organic matter under high temperature and pressure. This is done so that an accurate pore 
-                  volume can be determined. I designed a LabVIEW program that uses Queues to control a core cleaner for long periods of time. The program is able to read pressures from
+                  volume can be determined. I designed a LabVIEW program that uses Queues to control a core cleaner for long periods of time. 
+                </p>
+                <p class="indent">
+                  The program is able to read pressures from
                   transducers, read temperatures, and read tank levels in order to control 7 air actuated valves in the system. The program automatically raises CO<sub>2</sub> pressure,
                   fills tanks with toluene, holds for a defined period of time at temperature, and safely releases pressure.
                 </p>
