--- a/scalprogram-details.html
+++ b/scalprogram-details.html
@@ -77,9 +77,12 @@
                 <p class="indent">
                   SCAL stands for special core analysis lab which is the lab I worked in at Chesapeake Energy. This lab required equipment to be reconfigured regularly to achieve different 
                   experimental designs for unique experiments. I designed the SCAL program to be versatile and robust. The program is capable of reading data from and controlling up to 4
-                  Teledyne ISCO pumps simulatenously. The program can also read data from up to 5 different transducers or flowmeters at a time. Aside from reading data in real-time, the 
+                  Teledyne ISCO pumps simulatenously. 
+                </p>
+                <p class="indent">
+                  The program can also read data from up to 5 different transducers or flowmeters at a time. Aside from reading data in real-time, the 
                   program is also capable of data logging, automated pump control based on real-time calculated values from other devices, or automated pump control based on specified time 
-                  intervals.
+                  intervals. For more information, you can view the user manual I created <a href="assets/SCAL Program Help Document.pdf" download="SCAL Program Manual">here</a>.
                 </p>
               </div>
             </div>
