--- a/wildthings-details.html
+++ b/wildthings-details.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Where the Wild Things Are.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Wild Things.jpg" class="img-fluid" alt="">
                 </div>
 
               </div>
