--- a/brat7066-details.html
+++ b/brat7066-details.html
@@ -50,11 +50,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Multisim Board Design.png" class="img-fluid" alt="">
+                  <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Circuit Board Demonstration.MOV" class="img-fluid" type="video/mp4"></video>             
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/BRAT7066 Board Design.png" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Circuit Board Corner.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Empty Board Close Up.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/BRAT7066 Board Design.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Multisim Board Design.png" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -75,9 +87,8 @@
               <h2>15 Segment Display Board</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  This is one of my very first electronics projects I took on as an adult. The mask is a <i>Mad Max</i> themed voice changer I made for Halloween while in graduate school.
-                  The mask uses two arduinos, one to control the lights and one to control the voice changer. The voice changer uses a WAV shield to alter your voice based on a 
-                  potentiometer (high or low).
+                  This is a circuit board I designed for a class project that continuously displays the first four letters of my last name along with the last four letters of my 
+                  student ID <i>(BRAT7066)</i>. The circuit was designed using <i>National Instruments MulitSim</i> and the board was designed using <i>AutoCAD Eagle</i>. No code is involved at all!
                 </p>
               </div>
             </div>
