--- a/dicetower-details.html
+++ b/dicetower-details.html
@@ -50,7 +50,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Dice Tower 3D Design.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Dice Tower Set.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Dice Tower Corner.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Dice Close Up.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Dice Tower Partially Closed.JPG" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/DIce Tower Closed.JPG" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
