--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="indent">
               I am a creative idividual with a passion for learning. The term "forever student" definitely applies to me. I am also a tinkerer. As a child, my hobbies included taking 
-              electronics apart to repurpose them into a new gadget like an automatic light switch or a soda dispencer. One of my favorite hobbies was turning my entire room into one big 
-              elaborate Rube Goldberg machine!
+              electronics apart to repurpose them into a new gadget like an automatic light switch or a soda dispenser. One of my favorite hobbies was turning my entire room into one big 
+              elaborate <i>Rube Goldberg</i> machine!
            </p>
            <p class="indent">
-              Nowadays, I find myself doing much of the same, only this time in a laboratory! Throughout my career (both academic and professional), I've 
-              had plenty of opportunities to design, build, and program some new devices that improves our science! My hope is to continue to do more of the same in the future but I plan to 
+              Nowadays, I find myself doing much of the same, only this time in a laboratory. Throughout my career (both academic and professional), I've 
+              had plenty of opportunities to design, build, and program some new devices that improve our science. My hope is to continue this throughout my career but I plan to 
               go wherever my creativity takes me!
            </p>
            <p class="indent">
-              My hobbies include outdoor activities such as camping, hiking, and swimming. In case you haven't noticed by now, I'm also an incredibly large nerd. There are very few horror 
+              My hobbies include outdoor activities such as camping, hiking, and swimming. In case you haven't noticed by now, I'm also a bit of a nerd. There are very few horror 
               or science fiction movies I haven't seen. I'm a decent artist and a pretty good cook.  Ask me why <i>Alien</i> is the greatest scifi-horror of all time.
           </p>
           </div>
@@ -148,7 +148,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Here are some number you may find impressive.</p>
+          <p>Here are some numbers you may find impressive.</p>
         </div>
 
         <div class="row">
@@ -263,8 +263,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and things I've done! Click a project to see more 
-            details</p>
+          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and things I've done. Click a project to see more 
+            details.</p>
         </div>
 
         <div class="row">
@@ -513,7 +513,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Welcome to the resume section of my website! Below you can read about my skills and professional experience. If you'd like to download a copy of my resume, you can do so by 
+          <p>Welcome to the resume section of my website. Below you can read about my skills and professional experience. If you'd like to download a copy of my resume, you can do so by 
             clicking <a href="assets/Jordan Clay Bratcher Resume_2022.pdf" download="Jordan Clay Bratcher's Resume">here.</a></p>
         </div>
 
