--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
               <div class="swiper-wrapper align-items-center">
                 
                 <div class="swiper-slide">
-                  <img src="assets/img/AAPG Conference.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/About Me Business Headshot.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/Hydrothermal Lab Photo.png" class="img-fluid" alt="">
+                  <img src="assets/img/About Me Casual Headshot.jpg" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -122,20 +122,23 @@
           </div>
 
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <p class="indent">
-              I am a creative idividual with a passion for learning. The term "forever student" definitely applies to me. I am also a tinkerer. As a child, my hobbies included taking 
-              electronics apart to repurpose them into a new gadget like an automatic light switch or a soda dispenser. One of my favorite hobbies was turning my entire room into one big 
-              elaborate <i>Rube Goldberg</i> machine!
-           </p>
-           <p class="indent">
-              Nowadays, I find myself doing much of the same, only this time in a laboratory. Throughout my career (both academic and professional), I've 
-              had plenty of opportunities to design, build, and program some new devices that improve our science. My hope is to continue this throughout my career but I plan to 
-              go wherever my creativity takes me!
-           </p>
-           <p class="indent">
-              My hobbies include outdoor activities such as camping, hiking, and swimming. In case you haven't noticed by now, I'm also a bit of a nerd. There are very few horror 
-              or science fiction movies I haven't seen. I'm a decent artist and a pretty good cook.  Ask me why <i>Alien</i> is the greatest scifi-horror of all time.
+            <h2>
+           <p class="indent">       
+            I am a creative individual with a passion for learning, creating, and collaborating. I grew up in a small town in Kentucky and from a very young age I realized I liked to build gizmos and gadgets. The addiction started with making cities out of <i>Legos</i> and soon progressed to building walking machines, automatic light switches, and soda dispensers out of <i>K’nex</i>. Eventually, I graduated to disassembling and repurposing electronics and my bedroom began to resemble a junkyard.
           </p>
+           <p class="indent">
+            When I was in middle school, my father taught me to help rebuild classic cars and told me that if I wanted to have nice things when I got older, I should learn to build them myself. That stuck with me for a long time and to this day it is still something I draw inspiration from; frequently stopping to ask, “How can I build this myself?”. In high-school I discovered that I also had a strong passion for scientific research so when I began college, I had a hard time picking just one topic to study.
+           </p>
+           <p class="indent">
+            I began my studies focused on chemistry but mid-way through, I learned the overlap between chemistry and geology and made the leap to geochemistry. I mean what sciences are more encapsulating that learning how the entire planet works? A task I felt confident I could do. Upon receiving my bachelors degree, I proceeded to attend graduate school furthering my research into geochemistry and along the way got to see some of the most beautiful parts of the country (geologically speaking).
+           </p>
+           <p class="indent">
+            My first job out of graduate school was working in a research laboratory building experimental setups to study fluid-flow in oil and gas reservoirs. During my time constructing these high-pressure flow systems, I saw plenty of opportunities to teach myself something new. I learned to program using <i>Python</i> so that I could compile data faster. I learned to make automated pressure systems using <i>LabVIEW</i>. I begin learning more about circuitry and quickly realized that electricity and pressure behave in very similar ways.
+           </p>
+           <p class="indent">
+            Eventually, I decided I wanted to follow my interests even further and enrolled in a computer engineering program at the <i>University of Oklahoma</i>. As I am working through my classes, my passion for electronics is growing each year. My hobbies have always been aligned with creating and learning and so too will be my career. My current interests are PCB design and embedded systems development but I am always going wherever my creativity takes me.
+           </p>
+            </h2>
           </div>
         </div>
 
