--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                   <img src="assets/img/About Me Casual Headshot.jpg" class="img-fluid" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/About Me Jacket Casual.jpg" class="img-fluid" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -222,7 +226,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Javascript <i class="val">70%</i></span>
+              <span class="skill">Java<i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -235,7 +239,7 @@
             <div class="progress">
               <span class="skill">Python <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
